Se ajusta recepcion cedis y dashboard de control de rpc